# moribundmurdoch_x_dossier

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
assets/: main.css
docs/: MURDO_REMEMBER_DONT_SHARE_YOUR_API_KEYS_WITH_LLMS.md  Mor_Plan.md
src/: app.rs  main.rs
src/analysis/: mod.rs
src/db/: mod.rs
src/export/: mod.rs  public_data.rs
src/ingest/: mod.rs  x_api.rs
src/public_data/: manifest.json  mod.rs  models.rs  posts.json  sample.rs
src/ui/: broker_profile_panel.rs  dashboard.rs  import_panel.rs  llm_lab.rs  mod.rs  search_panel.rs  settings_panel.rs  shell.rs  timeline.rs
