[package]
name = "moribundmurdoch_x_dossier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dioxus = { version = "0.7.9", features = ["desktop", "router"] }
dotenvy = "0.15.7"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json", "query", "rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tantivy = "0.26.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
zip = "8.6.0"
